# Vidrpy

./: README.md
backend_python/: main.py  pyproject.toml  requirements.txt
backend_python/app/: db.py  main.py
backend_python/app/config/: settings.py
backend_python/app/models/: user.py  video.py
backend_python/app/routes/v1/: auth.py  root.py  videos.py
backend_python/app/services/: supabase.py  user.py  video.py
backend_python/app/types/: schemas.py
backend_python/app/utils/: auth.py  dependencies.py  google_oauth.py
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AuthForm.tsx  Footer.tsx  Header.tsx  VideoList.tsx  VideoRecorder.tsx
frontend/src/lib/apis/: authApi.ts  videoApi.ts
frontend/src/lib/db/: storage.ts
frontend/src/lib/hooks/: useVideoRecorder.ts
frontend/src/lib/services/: syncService.ts
frontend/src/lib/types/: auth.ts  video.ts
frontend/src/pages/: HomePage.tsx
scripts/sql_scripts_used/: add_google_oauth.sql  users.sql  videos.sql
