[project]
name = "backend-python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.122.0",
    "passlib>=1.7.4",
    "argon2-cffi>=21.3.0",
    "psycopg2>=2.9.11",
    "pyjwt>=2.8.0",
    "sqlalchemy>=2.0.44",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
]
